src/generated/LdScriptParser.cpp

// Generated from src/antlr/LdScript.g4 by ANTLR 4.11.1


#include "LdScriptListener.h"
#include "LdScriptVisitor.h"

#include "LdScriptParser.h"


using namespace antlrcpp;
using namespace antlrcpplds;

using namespace antlr4;

namespace {

struct LdScriptParserStaticData final {
  LdScriptParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  LdScriptParserStaticData(const LdScriptParserStaticData&) = delete;
  LdScriptParserStaticData(LdScriptParserStaticData&&) = delete;
  LdScriptParserStaticData& operator=(const LdScriptParserStaticData&) = delete;
  LdScriptParserStaticData& operator=(LdScriptParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag ldscriptParserOnceFlag;
LdScriptParserStaticData *ldscriptParserStaticData = nullptr;

void ldscriptParserInitialize() {
  assert(ldscriptParserStaticData == nullptr);
  auto staticData = std::make_unique<LdScriptParserStaticData>(
    std::vector<std::string>{
      "rule_set", "single_rule", "condition", "conclusion", "logical_expr", 
      "comparison_expr", "comparison_operand", "comp_operator", "arithmetic_expr", 
      "logical_entity", "numeric_entity"
    },
    std::vector<std::string>{
      "", "'if'", "'then'", "'and'", "'or'", "'true'", "'false'", "'*'", 
      "'/'", "'+'", "'-'", "'>'", "'>='", "'<'", "'<='", "'='", "'('", "')'"
    },
    std::vector<std::string>{
      "", "IF", "THEN", "AND", "OR", "TRUE", "FALSE", "MULT", "DIV", "PLUS", 
      "MINUS", "GT", "GE", "LT", "LE", "EQ", "LPAREN", "RPAREN", "DECIMAL", 
      "IDENTIFIER", "COMMENT", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  ldscriptParserStaticData = staticData.release();
}

}

LdScriptParser::LdScriptParser(TokenStream *input) : LdScriptParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

LdScriptParser::LdScriptParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  LdScriptParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *ldscriptParserStaticData->atn, ldscriptParserStaticData->decisionToDFA, ldscriptParserStaticData->sharedContextCache, options);
}

LdScriptParser::~LdScriptParser() {
  delete _interpreter;
}

const atn::ATN& LdScriptParser::getATN() const {
  return *ldscriptParserStaticData->atn;
}

std::string LdScriptParser::getGrammarFileName() const {
  return "LdScript.g4";
}

const std::vector<std::string>& LdScriptParser::getRuleNames() const {
  return ldscriptParserStaticData->ruleNames;
}

const dfa::Vocabulary& LdScriptParser::getVocabulary() const {
  return ldscriptParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView LdScriptParser::getSerializedATN() const {
  return ldscriptParserStaticData->serializedATN;
}


//----------------- Rule_setContext ------------------------------------------------------------------

LdScriptParser::Rule_setContext::Rule_setContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LdScriptParser::Rule_setContext::EOF() {
  return getToken(LdScriptParser::EOF, 0);
}

std::vector<LdScriptParser::Single_ruleContext *> LdScriptParser::Rule_setContext::single_rule() {
  return getRuleContexts<LdScriptParser::Single_ruleContext>();
}

LdScriptParser::Single_ruleContext* LdScriptParser::Rule_setContext::single_rule(size_t i) {
  return getRuleContext<LdScriptParser::Single_ruleContext>(i);
}


size_t LdScriptParser::Rule_setContext::getRuleIndex() const {
  return LdScriptParser::RuleRule_set;
}

void LdScriptParser::Rule_setContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LdScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRule_set(this);
}

void LdScriptParser::Rule_setContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LdScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRule_set(this);
}


std::any LdScriptParser::Rule_setContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LdScriptVisitor*>(visitor))
    return parserVisitor->visitRule_set(this);
  else
    return visitor->visitChildren(this);
}

LdScriptParser::Rule_setContext* LdScriptParser::rule_set() {
  Rule_setContext *_localctx = _tracker.createInstance<Rule_setContext>(_ctx, getState());
  enterRule(_localctx, 0, LdScriptParser::RuleRule_set);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(25);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == LdScriptParser::IF) {
      setState(22);
      single_rule();
      setState(27);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(28);
    match(LdScriptParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Single_ruleContext ------------------------------------------------------------------

LdScriptParser::Single_ruleContext::Single_ruleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LdScriptParser::Single_ruleContext::IF() {
  return getToken(LdScriptParser::IF, 0);
}

LdScriptParser::ConditionContext* LdScriptParser::Single_ruleContext::condition() {
  return getRuleContext<LdScriptParser::ConditionContext>(0);
}

tree::TerminalNode* LdScriptParser::Single_ruleContext::THEN() {
  return getToken(LdScriptParser::THEN, 0);
}

LdScriptParser::ConclusionContext* LdScriptParser::Single_ruleContext::conclusion() {
  return getRuleContext<LdScriptParser::ConclusionContext>(0);
}


size_t LdScriptParser::Single_ruleContext::getRuleIndex() const {
  return LdScriptParser::RuleSingle_rule;
}

void LdScriptParser::Single_ruleContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LdScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSingle_rule(this);
}

void LdScriptParser::Single_ruleContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LdScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSingle_rule(this);
}


std::any LdScriptParser::Single_ruleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LdScriptVisitor*>(visitor))
    return parserVisitor->visitSingle_rule(this);
  else
    return visitor->visitChildren(this);
}

LdScriptParser::Single_ruleContext* LdScriptParser::single_rule() {
  Single_ruleContext *_localctx = _tracker.createInstance<Single_ruleContext>(_ctx, getState());
  enterRule(_localctx, 2, LdScriptParser::RuleSingle_rule);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(30);
    match(LdScriptParser::IF);
    setState(31);
    condition();
    setState(32);
    match(LdScriptParser::THEN);
    setState(33);
    conclusion();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConditionContext ------------------------------------------------------------------

LdScriptParser::ConditionContext::ConditionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LdScriptParser::Logical_exprContext* LdScriptParser::ConditionContext::logical_expr() {
  return getRuleContext<LdScriptParser::Logical_exprContext>(0);
}


size_t LdScriptParser::ConditionContext::getRuleIndex() const {
  return LdScriptParser::RuleCondition;
}

void LdScriptParser::ConditionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LdScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCondition(this);
}

void LdScriptParser::ConditionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LdScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCondition(this);
}


std::any LdScriptParser::ConditionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LdScriptVisitor*>(visitor))
    return parserVisitor->visitCondition(this);
  else
    return visitor->visitChildren(this);
}

LdScriptParser::ConditionContext* LdScriptParser::condition() {
  ConditionContext *_localctx = _tracker.createInstance<ConditionContext>(_ctx, getState());
  enterRule(_localctx, 4, LdScriptParser::RuleCondition);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(35);
    logical_expr(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConclusionContext ------------------------------------------------------------------

LdScriptParser::ConclusionContext::ConclusionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LdScriptParser::ConclusionContext::IDENTIFIER() {
  return getToken(LdScriptParser::IDENTIFIER, 0);
}


size_t LdScriptParser::ConclusionContext::getRuleIndex() const {
  return LdScriptParser::RuleConclusion;
}

void LdScriptParser::ConclusionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LdScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConclusion(this);
}

void LdScriptParser::ConclusionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LdScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConclusion(this);
}


std::any LdScriptParser::ConclusionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LdScriptVisitor*>(visitor))
    return parserVisitor->visitConclusion(this);
  else
    return visitor->visitChildren(this);
}

LdScriptParser::ConclusionContext* LdScriptParser::conclusion() {
  ConclusionContext *_localctx = _tracker.createInstance<ConclusionContext>(_ctx, getState());
  enterRule(_localctx, 6, LdScriptParser::RuleConclusion);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(37);
    match(LdScriptParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Logical_exprContext ------------------------------------------------------------------

LdScriptParser::Logical_exprContext::Logical_exprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t LdScriptParser::Logical_exprContext::getRuleIndex() const {
  return LdScriptParser::RuleLogical_expr;
}

void LdScriptParser::Logical_exprContext::copyFrom(Logical_exprContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- LogicalEntityContext ------------------------------------------------------------------

LdScriptParser::Logical_entityContext* LdScriptParser::LogicalEntityContext::logical_entity() {
  return getRuleContext<LdScriptParser::Logical_entityContext>(0);
}

LdScriptParser::LogicalEntityContext::LogicalEntityContext(Logical_exprContext *ctx) { copyFrom(ctx); }

void LdScriptParser::LogicalEntityContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LdScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLogicalEntity(this);
}
void LdScriptParser::LogicalEntityContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LdScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLogicalEntity(this);
}

std::any LdScriptParser::LogicalEntityContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LdScriptVisitor*>(visitor))
    return parserVisitor->visitLogicalEntity(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ComparisonExpressionContext ------------------------------------------------------------------

LdScriptParser::Comparison_exprContext* LdScriptParser::ComparisonExpressionContext::comparison_expr() {
  return getRuleContext<LdScriptParser::Comparison_exprContext>(0);
}

LdScriptParser::ComparisonExpressionContext::ComparisonExpressionContext(Logical_exprContext *ctx) { copyFrom(ctx); }

void LdScriptParser::ComparisonExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LdScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterComparisonExpression(this);
}
void LdScriptParser::ComparisonExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LdScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitComparisonExpression(this);
}

std::any LdScriptParser::ComparisonExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LdScriptVisitor*>(visitor))
    return parserVisitor->visitComparisonExpression(this);
  else
    return visitor->visitChildren(this);
}
//----------------- LogicalExpressionInParenContext ------------------------------------------------------------------

tree::TerminalNode* LdScriptParser::LogicalExpressionInParenContext::LPAREN() {
  return getToken(LdScriptParser::LPAREN, 0);
}

LdScriptParser::Logical_exprContext* LdScriptParser::LogicalExpressionInParenContext::logical_expr() {
  return getRuleContext<LdScriptParser::Logical_exprContext>(0);
}

tree::TerminalNode* LdScriptParser::LogicalExpressionInParenContext::RPAREN() {
  return getToken(LdScriptParser::RPAREN, 0);
}

LdScriptParser::LogicalExpressionInParenContext::LogicalExpressionInParenContext(Logical_exprContext *ctx) { copyFrom(ctx); }

void LdScriptParser::LogicalExpressionInParenContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LdScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLogicalExpressionInParen(this);
}
void LdScriptParser::LogicalExpressionInParenContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LdScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLogicalExpressionInParen(this);
}

std::any LdScriptParser::LogicalExpressionInParenContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LdScriptVisitor*>(visitor))
    return parserVisitor->visitLogicalExpressionInParen(this);
  else
    return visitor->visitChildren(this);
}
//----------------- LogicalExpressionAndContext ------------------------------------------------------------------

std::vector<LdScriptParser::Logical_exprContext *> LdScriptParser::LogicalExpressionAndContext::logical_expr() {
  return getRuleContexts<LdScriptParser::Logical_exprContext>();
}

LdScriptParser::Logical_exprContext* LdScriptParser::LogicalExpressionAndContext::logical_expr(size_t i) {
  return getRuleContext<LdScriptParser::Logical_exprContext>(i);
}

tree::TerminalNode* LdScriptParser::LogicalExpressionAndContext::AND() {
  return getToken(LdScriptParser::AND, 0);
}

LdScriptParser::LogicalExpressionAndContext::LogicalExpressionAndContext(Logical_exprContext *ctx) { copyFrom(ctx); }

void LdScriptParser::LogicalExpressionAndContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LdScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLogicalExpressionAnd(this);
}
void LdScriptParser::LogicalExpressionAndContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LdScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLogicalExpressionAnd(this);
}

std::any LdScriptParser::LogicalExpressionAndContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LdScriptVisitor*>(visitor))
    return parserVisitor->visitLogicalExpressionAnd(this);
  else
    return visitor->visitChildren(this);
}
//----------------- LogicalExpressionOrContext ------------------------------------------------------------------

std::vector<LdScriptParser::Logical_exprContext *> LdScriptParser::LogicalExpressionOrContext::logical_expr() {
  return getRuleContexts<LdScriptParser::Logical_exprContext>();
}

LdScriptParser::Logical_exprContext* LdScriptParser::LogicalExpressionOrContext::logical_expr(size_t i) {
  return getRuleContext<LdScriptParser::Logical_exprContext>(i);
}

tree::TerminalNode* LdScriptParser::LogicalExpressionOrContext::OR() {
  return getToken(LdScriptParser::OR, 0);
}

LdScriptParser::LogicalExpressionOrContext::LogicalExpressionOrContext(Logical_exprContext *ctx) { copyFrom(ctx); }

void LdScriptParser::LogicalExpressionOrContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LdScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLogicalExpressionOr(this);
}
void LdScriptParser::LogicalExpressionOrContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LdScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLogicalExpressionOr(this);
}

std::any LdScriptParser::LogicalExpressionOrContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LdScriptVisitor*>(visitor))
    return parserVisitor->visitLogicalExpressionOr(this);
  else
    return visitor->visitChildren(this);
}

LdScriptParser::Logical_exprContext* LdScriptParser::logical_expr() {
   return logical_expr(0);
}

LdScriptParser::Logical_exprContext* LdScriptParser::logical_expr(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  LdScriptParser::Logical_exprContext *_localctx = _tracker.createInstance<Logical_exprContext>(_ctx, parentState);
  LdScriptParser::Logical_exprContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 8;
  enterRecursionRule(_localctx, 8, LdScriptParser::RuleLogical_expr, precedence);

    

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(46);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<ComparisonExpressionContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;

      setState(40);
      comparison_expr();
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<LogicalExpressionInParenContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(41);
      match(LdScriptParser::LPAREN);
      setState(42);
      logical_expr(0);
      setState(43);
      match(LdScriptParser::RPAREN);
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<LogicalEntityContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(45);
      logical_entity();
      break;
    }

    default:
      break;
    }
    _ctx->stop = _input->LT(-1);
    setState(56);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(54);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
        case 1: {
          auto newContext = _tracker.createInstance<LogicalExpressionAndContext>(_tracker.createInstance<Logical_exprContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleLogical_expr);
          setState(48);

          if (!(precpred(_ctx, 5))) throw FailedPredicateException(this, "precpred(_ctx, 5)");
          setState(49);
          match(LdScriptParser::AND);
          setState(50);
          logical_expr(6);
          break;
        }

        case 2: {
          auto newContext = _tracker.createInstance<LogicalExpressionOrContext>(_tracker.createInstance<Logical_exprContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleLogical_expr);
          setState(51);

          if (!(precpred(_ctx, 4))) throw FailedPredicateException(this, "precpred(_ctx, 4)");
          setState(52);
          match(LdScriptParser::OR);
          setState(53);
          logical_expr(5);
          break;
        }

        default:
          break;
        } 
      }
      setState(58);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- Comparison_exprContext ------------------------------------------------------------------

LdScriptParser::Comparison_exprContext::Comparison_exprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t LdScriptParser::Comparison_exprContext::getRuleIndex() const {
  return LdScriptParser::RuleComparison_expr;
}

void LdScriptParser::Comparison_exprContext::copyFrom(Comparison_exprContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ComparisonExpressionParensContext ------------------------------------------------------------------

tree::TerminalNode* LdScriptParser::ComparisonExpressionParensContext::LPAREN() {
  return getToken(LdScriptParser::LPAREN, 0);
}

LdScriptParser::Comparison_exprContext* LdScriptParser::ComparisonExpressionParensContext::comparison_expr() {
  return getRuleContext<LdScriptParser::Comparison_exprContext>(0);
}

tree::TerminalNode* LdScriptParser::ComparisonExpressionParensContext::RPAREN() {
  return getToken(LdScriptParser::RPAREN, 0);
}

LdScriptParser::ComparisonExpressionParensContext::ComparisonExpressionParensContext(Comparison_exprContext *ctx) { copyFrom(ctx); }

void LdScriptParser::ComparisonExpressionParensContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LdScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterComparisonExpressionParens(this);
}
void LdScriptParser::ComparisonExpressionParensContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LdScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitComparisonExpressionParens(this);
}

std::any LdScriptParser::ComparisonExpressionParensContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LdScriptVisitor*>(visitor))
    return parserVisitor->visitComparisonExpressionParens(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ComparisonExpressionWithOperatorContext ------------------------------------------------------------------

std::vector<LdScriptParser::Comparison_operandContext *> LdScriptParser::ComparisonExpressionWithOperatorContext::comparison_operand() {
  return getRuleContexts<LdScriptParser::Comparison_operandContext>();
}

LdScriptParser::Comparison_operandContext* LdScriptParser::ComparisonExpressionWithOperatorContext::comparison_operand(size_t i) {
  return getRuleContext<LdScriptParser::Comparison_operandContext>(i);
}

LdScriptParser::Comp_operatorContext* LdScriptParser::ComparisonExpressionWithOperatorContext::comp_operator() {
  return getRuleContext<LdScriptParser::Comp_operatorContext>(0);
}

LdScriptParser::ComparisonExpressionWithOperatorContext::ComparisonExpressionWithOperatorContext(Comparison_exprContext *ctx) { copyFrom(ctx); }

void LdScriptParser::ComparisonExpressionWithOperatorContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LdScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterComparisonExpressionWithOperator(this);
}
void LdScriptParser::ComparisonExpressionWithOperatorContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LdScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitComparisonExpressionWithOperator(this);
}

std::any LdScriptParser::ComparisonExpressionWithOperatorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LdScriptVisitor*>(visitor))
    return parserVisitor->visitComparisonExpressionWithOperator(this);
  else
    return visitor->visitChildren(this);
}
LdScriptParser::Comparison_exprContext* LdScriptParser::comparison_expr() {
  Comparison_exprContext *_localctx = _tracker.createInstance<Comparison_exprContext>(_ctx, getState());
  enterRule(_localctx, 10, LdScriptParser::RuleComparison_expr);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(67);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<LdScriptParser::ComparisonExpressionWithOperatorContext>(_localctx);
      enterOuterAlt(_localctx, 1);
      setState(59);
      comparison_operand();
      setState(60);
      comp_operator();
      setState(61);
      comparison_operand();
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<LdScriptParser::ComparisonExpressionParensContext>(_localctx);
      enterOuterAlt(_localctx, 2);
      setState(63);
      match(LdScriptParser::LPAREN);
      setState(64);
      comparison_expr();
      setState(65);
      match(LdScriptParser::RPAREN);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Comparison_operandContext ------------------------------------------------------------------

LdScriptParser::Comparison_operandContext::Comparison_operandContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LdScriptParser::Arithmetic_exprContext* LdScriptParser::Comparison_operandContext::arithmetic_expr() {
  return getRuleContext<LdScriptParser::Arithmetic_exprContext>(0);
}


size_t LdScriptParser::Comparison_operandContext::getRuleIndex() const {
  return LdScriptParser::RuleComparison_operand;
}

void LdScriptParser::Comparison_operandContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LdScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterComparison_operand(this);
}

void LdScriptParser::Comparison_operandContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LdScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitComparison_operand(this);
}


std::any LdScriptParser::Comparison_operandContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LdScriptVisitor*>(visitor))
    return parserVisitor->visitComparison_operand(this);
  else
    return visitor->visitChildren(this);
}

LdScriptParser::Comparison_operandContext* LdScriptParser::comparison_operand() {
  Comparison_operandContext *_localctx = _tracker.createInstance<Comparison_operandContext>(_ctx, getState());
  enterRule(_localctx, 12, LdScriptParser::RuleComparison_operand);
